# qasecqlaw

./: .gitignore  README.md  batch_extract.sh  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run_mini_benchmark.sh  run_owasp_benchmark.sh  run_qasecclaw_cwe78.sh  seed_dataset.sh  structure.txt  vulnerability_dataset.csv
.github/workflows/: ci.yml
agents/: README.md
datasets/: README.md
datasets/configs/: example.local.yaml
datasets/sampling/: stratified_sampler.py
docs/: architecture.md
experiments/: README.md
experiments/baselines/: run_baselines.py
experiments/metrics/: score_benchmark.py
experiments/pipelines/: generate_results.py
experiments/python/: README.md  pyproject.toml
experiments/results/: findings_qasecclaw.csv  findings_qasecclaw_cwe78.csv  findings_semgrep.csv  findings_semgrep_cwe78.csv  qasecclaw_owasp_report.md  qasecclaw_raw_findings.json  scored_qasecclaw.json  scored_qasecclaw.md  scored_qasecclaw_cwe78.json  scored_qasecclaw_cwe78.md  scored_semgrep.json  scored_semgrep.md  scored_semgrep_cwe78.json  scored_semgrep_cwe78.md
framework/: .env.example  package.json  qasecclaw-raw-findings.json  qasecclaw-report.md  tsconfig.json  vitest.config.ts
framework/src/: index.test.ts  index.ts
research/: README.md
research/figures/: comparison_table.md  comparison_table.tex
research_reports/: DVWA_report.md  NodeGoat_report.md  VAmPI_report.md  Vulnerable-Flask-App_report.md  WebGoat_report.md  crAPI_report.md  dvna_report.md  dvpwa_report.md  dvws-node_report.md  juice-shop_report.md  railsgoat_report.md
(+46 files in other folders)
