[project]
name = "qasecclaw-experiments"
version = "0.1.0"
description = "Python tooling for QASecClaw experiments: sampling, metrics, plots, and log analysis."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "scikit-learn>=1.4",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "seaborn>=0.13",
  "tqdm>=4.66",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
